Avoid having to condition on mobile mode

--- a/app/assets/stylesheets/ltr.css.scss
+++ b/app/assets/stylesheets/ltr.css.scss
@@ -106,6 +106,7 @@ html body {
 
 #sidebar {
   left: 0px;
+  margin-right: 3px;
 }
 
 #sidebar #sidebar_title {
