--- a/app/assets/stylesheets/rtl.css.scss
+++ b/app/assets/stylesheets/rtl.css.scss
@@ -107,6 +107,7 @@ html body {
 
 #sidebar {
   right: 0px;
+  margin-left: 3px;
 }
 
 #sidebar #sidebar_title {
