--- a/app/assets/stylesheets/small.css.scss
+++ b/app/assets/stylesheets/small.css.scss
@@ -118,6 +118,7 @@ h1 {
 #sidebar {
   border: 0px;
   border-right: 1px solid #ccccdd;
+  margin: 0px;
 }
 
 .sidebar_title, #sidebar_content {
